<resources>
    <string name="app_name">AplikasiPetShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_text_login_signin">Login</string>
    <string name="text_signin_register">Tidak memiliki akun?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="text_signup_to_signin">Memiliki akun?</string>
    <string name="log_in">Login</string>
    <string name="btn_text_register">Register</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="no_permission">" Tidak mendapatkan ijin"</string>
    <string name="cara">Cara Mengolah :</string>
    <string name="logout_success">Kamu telah berhasil keluar. kembali ke halaman login</string>
    <string name="add_picture_warn">"Tolong masukkan gambar terlebih dahulu."</string>
    <string name="PET">PET adalah singkatan dari Polyethylene Terephthalate, Plastik ini digunakan untuk membuat wadah paling umum di pasar minuman ringan saat ini, yaitu botol plastik. Sampah jenis PET bisa didaur ulang dan biasa digunakan untuk kemasan minuman ringan berkarbonasi, air kemasan, susu, jus, minuman olahraga dan energi, toples, punnets, bak dan nampan untuk makanan, botol untuk rumah tangga, produk perawatan pribadi, dan lembaran dan film untuk kemasan, PET adalah jenis plastik berlabel kode # 1 di atas atau di dekat dasar botol dan wadah.</string>
    <string name="Glass">Glass adalah limbah yang berbahan kaca dan berasal dari penggunaan pada kegiatan sehari-hari, baik di industri maupun kegiatan lainnya.Limbah botol kaca, banyak dijumlah di lingkungan sekitar, dapat berasal dari konsumsi minuman, saus, selai, atau kecap. Limbah tersebut merupakan material yang secara alami tidak dapat didaur ulang.</string>
    <string name="AluCan">Aluminium Can atau Kaleng merupakan salah satu sampah anorganik yang perlu didaur ulang. Kaleng sering digunakan untuk mengemas makanan, minuman, atau produk lain.</string>
    <string name="rec_title">Cara Membuat Gelas Kopi Dari Botol Bekas/Cutting Bottle/Glass Bottle</string>
    <string name="link">https://youtu.be/6c5wz8WNUMk</string>
    <string name="scan">Scan Sampahmu</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profil">Profil</string>

    #TIPS
    <string name="tips1">Bagaimana cara memilih makanan yang cocok untuk hewan peliharaan?</string>
    <string name="tips2">Bagaimana pola makan hewan peliharaan?</string>
    <string name="tips3">Bagaimana cara tepat merawat hewan peliharaan?</string>

    <string name="isi_tips1">1. Pilih yang Sesuai dengan Standar.\n2. Sesuaikan Makanan dengan Usia Kucing.\n3. Sesuaikan dengan Budget.\n4. Perhatikan Jenis Makanannya.\n5. Perhatikan Komposisi Bahan Penyusun.\n6. Hindari Hanya Memiliki Satu Jenis.</string>
    <string name="isi_tips2">Hewan yang kelebihan berat badan dapat berdampak buruk bagi kesehatan peliharaan detikers. Sahabat Baik wajib mengikuti rekomendasi diet yang dibuat oleh dokter hewan sesuai dengan kebutuhan nutrisi berdasarkan ukuran, usia, tingkat aktivitas, dan ras. Ingatlah untuk memberikan suguhan yang sehat!</string>
    <string name="isi_tips3">1. Menyediakan kandang yang nyaman.\n2. Memberikan makanan dan minuman sehat.\n3. Rajin membersihkan kotoran hewan.\n4. Melakukan vaksinasi pada hewan.\n5. Menyediakan tempat di luar kandang.\n6.Berkomunikasi secara intensif.\n7. Jaga kebersihan rumah.</string>

    #FAQ
    <string name="faq1">Apa itu Petshop App?</string>
    <string name="faq2">Bagaimana Cara menemukan Petshop Terdekat?</string>
    <string name="faq3">Apa saja fitur utama dari aplikasi ini?</string>

    <string name="isi_faq1">Aplikasi berbasis android sebagai wadah bagi para pejual dan pembeli dalam melakukan jual beli kebutuhan untuk hewan peliharaan.</string>
    <string name="isi_faq2">Anda dapat langsung mengklik ikon map pada halaman awal. lalu anda akan melihat list petshop yang diurutkan dari jarak terdekat</string>
    <string name="isi_faq3">-Fitur etalase, fitur ini memungkinkan pengguna untuk mencari produk - produk yang berkaitan dengan hewan peliharaan seperti makanannya dll\n
-Profile, fitur ini memungkinkan pengguna untuk melihat tentang informasi pengguna\n -FAQ, fitur ini memungkinkan pengguna untuk melihat beberapa pertanyaan dan jawaban yang dibutuhkan user\n -Tips, fitur ini memungkinkan pengguna untuk melihat dan mendapatkan tips tenang cara merawat peliharaannya\n -Wishlist, fitur ini memungkinkan pengguna untuk melihat beberapa barang yang telah ditandai oleh pengguna pada fitur etalase</string>

    #FAQ N TIPS
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="description">Deskripsi</string>
    <string name="belum_diisi">Belum Diisi</string>
    <string-array name="data_name">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string-array name="data_description">
        <item>Salah seorang ulama dan khatib terkemuka di Masjid Besar Kasultanan Yogyakarta pada masa itu, dan ibu dari K.H. Ahmad Dahlan adalah puteri dari H. Ibrahim yang juga menjabat penghulu Kesultanan Ngayogyakarta Hadiningrat pada masa itu. KH. Ahmad Dahlan telah mempelopori kebangkitan ummat Islam untuk menyadari nasibnya sebagai bangsa terjajah yang masih harus belajar dan berbuat. </item>
        <item>Jenderal TNI Anumerta Ahmad Yani (juga dieja Achmad Yani; lahir di Purworejo, Jawa Tengah, 19 Juni 1922 – meninggal di Lubang Buaya, Jakarta, 1 Oktober 1965 pada umur 43 tahun) adalah komandan Tentara Nasional Indonesia Angkatan Darat, dan dibunuh oleh anggota Gerakan 30 September saat mencoba untuk menculik dia dari rumahnya.</item>
        <item>Sutomo (lahir di Surabaya, Jawa Timur, 3 Oktober 1920 – meninggal di Padang Arafah, Arab Saudi, 7 Oktober 1981 pada umur 61 tahun) lebih dikenal dengan sapaan akrab oleh rakyat sebagai Bung Tomo, adalah pahlawan yang terkenal karena peranannya dalam membangkitkan semangat rakyat untuk melawan kembalinya penjajah Belanda melalui tentara NICA, yang berakhir dengan pertempuran 10 November 1945 yang hingga kini diperingati sebagai Hari Pahlawan.</item>
        <item>Jenderal TNI (Purn.) Gatot Soebroto (lahir di Sumpiuh, Banyumas, Jawa Tengah, 10 Oktober 1907 – meninggal di Jakarta, 11 Juni 1962 pada umur 54 tahun) adalah tokoh perjuangan militer Indonesia dalam merebut kemerdekaan dan juga pahlawan nasional Indonesia. Ia dimakamkan di Ungaran, kabupaten Semarang.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi Suryaningrat, sejak 1922 menjadi Ki Hadjar Dewantara, EBI: Ki Hajar Dewantara, beberapa menuliskan bunyi bahasa Jawanya dengan Ki Hajar Dewantoro; lahir di Pakualaman, 2 Mei 1889 – meninggal di Yogyakarta, 26 April 1959 pada umur 69 tahun; selanjutnya disingkat sebagai "Soewardi" atau "KHD") adalah aktivis pergerakan kemerdekaan Indonesia, kolumnis, politisi, dan pelopor pendidikan bagi kaum pribumi Indonesia dari zaman penjajahan Belanda. Ia adalah pendiri Perguruan Taman Siswa, suatu lembaga pendidikan yang memberikan kesempatan bagi para pribumi untuk bisa memperoleh hak pendidikan seperti halnya para priyayi maupun orang-orang Belanda.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (lahir dengan nama Mohammad Athar, dikenal sebagai Bung Hatta; lahir di Fort de Kock (sekarang Bukittinggi, Sumatera Barat), Hindia Belanda, 12 Agustus 1902 – meninggal di Jakarta, 14 Maret 1980 pada umur 77 tahun) adalah tokoh pejuang, negarawan, ekonom, dan juga Wakil Presiden Indonesia yang pertama. Ia bersama Soekarno memainkan peranan penting untuk memerdekakan bangsa Indonesia dari penjajahan Belanda sekaligus memproklamirkannya pada 17 Agustus 1945. Ia juga pernah menjabat sebagai Perdana Menteri dalam Kabinet Hatta I, Hatta II, dan RIS. Ia mundur dari jabatan wakil presiden pada tahun 1956, karena berselisih dengan Presiden Soekarno. Hatta juga dikenal sebagai Bapak Koperasi Indonesia.</item>
        <item>Jenderal Besar Raden Soedirman (EYD: Sudirman; lahir 24 Januari 1916 – meninggal 29 Januari 1950 pada umur 34 tahun) adalah seorang perwira tinggi Indonesia pada masa Revolusi Nasional Indonesia. Menjadi panglima besar Tentara Nasional Indonesia pertama, ia secara luas terus dihormati di Indonesia. Terlahir dari pasangan rakyat biasa di Purbalingga, Hindia Belanda, Soedirman diadopsi oleh pamannya yang seorang priyayi. Setelah keluarganya pindah ke Cilacap pada tahun 1916, Soedirman tumbuh menjadi seorang siswa rajin; ia sangat aktif dalam kegiatan ekstrakurikuler, termasuk mengikuti program kepanduan yang dijalankan oleh organisasi Islam Muhammadiyah. Saat di sekolah menengah, Soedirman mulai menunjukkan kemampuannya dalam memimpin dan berorganisasi, dan dihormati oleh masyarakat karena ketaatannya pada Islam. Setelah berhenti kuliah keguruan, pada 1936 ia mulai bekerja sebagai seorang guru, dan kemudian menjadi kepala sekolah, di sekolah dasar Muhammadiyah; ia juga aktif dalam kegiatan Muhammadiyah lainnya dan menjadi pemimpin Kelompok Pemuda Muhammadiyah pada tahun 1937. Setelah Jepang menduduki Hindia Belanda pada 1942, Soedirman tetap mengajar. Pada tahun 1944, ia bergabung dengan tentara Pembela Tanah Air (PETA) yang disponsori Jepang, menjabat sebagai komandan batalion di Banyumas. Selama menjabat, Soedirman bersama rekannya sesama prajurit melakukan pemberontakan, namun kemudian diasingkan ke Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, nama lahir: Koesno Sosrodihardjo) (lahir di Surabaya, Jawa Timur, 6 Juni 1901 – meninggal di Jakarta, 21 Juni 1970 pada umur 69 tahun) adalah Presiden pertama Republik Indonesia yang menjabat pada periode 1945–1967. Ia memainkan peranan penting dalam memerdekakan bangsa Indonesia dari penjajahan Belanda. Ia adalah Proklamator Kemerdekaan Indonesia (bersama dengan Mohammad Hatta) yang terjadi pada tanggal 17 Agustus 1945. Soekarno adalah yang pertama kali mencetuskan konsep mengenai Pancasila sebagai dasar negara Indonesia dan ia sendiri yang menamainya.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
    </string-array>
    <string name="title_activity_home_user">HomeUserActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>