<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.RegisterUserFragment">

    <ImageView
        android:id="@+id/iv_app_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logologineweb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:alpha="0"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/edt_input_email_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.aplikasipetshop.custom.EmailInputLayout
        android:id="@+id/edt_input_email_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/edt_input_password_register"
        app:layout_constraintEnd_toEndOf="@+id/edt_input_name"
        app:layout_constraintStart_toStartOf="@+id/edt_input_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_name" />


    <com.example.aplikasipetshop.custom.PasswordInputLayout
        android:id="@+id/edt_input_password_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/edt_input_email_register"
        app:layout_constraintStart_toStartOf="@+id/edt_input_email_register"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_email_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:alpha="0"
        android:enabled="false"
        android:text="@string/btn_text_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_input_password_register"
        app:layout_constraintStart_toStartOf="@+id/edt_input_password_register"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_password_register"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/text_signup_to_signin"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_to_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/btn_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_to_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/tv_to_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/design_default_color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>